# ClawBio

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  clawbio.py  index.html  pyproject.toml  pytest.ini
.github/workflows/: bench-leaderboard.yml  ci.yml
bot/: README.md  action_offers.py  roboterri.py  roboterri_discord.py  roboterri_whatsapp.py  tool_loop_utils.py
clawbio/: contract_alerts.py  skill_intents.py
clawbio/common/: audit.py  portable_commands.py  report.py
clawbio/gi/: gi_runner.py
clawbio/tests/: test_portable_commands.py
docs/: CLAWBIO-BRIEF.md  architecture.md  skill-action-contract.md  tutorial-first-skill.ipynb  tutorial-roboterri-install.md
scripts/: generate_catalog.py
skills/: catalog.json
skills/affinity-proteomics/: SKILL.md  affinity_proteomics.py
skills/bio-orchestrator/: SKILL.md
skills/claw-methylation-cycle/: SKILL.md  demo_input.txt  methylation_cycle.py
skills/crispr-screen-prioritizer/: SKILL.md  crispr_screen_prioritizer.py
skills/hla-typing/: SKILL.md
skills/ld-1000g-region-compute/: SKILL.md  ld_1000g_region_compute.py  ondemand_client.py
skills/locuscompare-region-render/: SKILL.md  cli.py  locuscompare_region_render.py  regional_plot.py
skills/marker-dominance-mapper/: SKILL.md
skills/omics-target-evidence-mapper/: SKILL.md  omics_target_evidence_mapper.py
skills/proteomics-de/: SKILL.md
skills/spatial-transcriptomics-mapper/: SKILL.md  spatial_transcriptomics_mapper.py
tests/: test_action_offers.py  test_clawbio_runner_actions.py  test_contract_alerts.py  test_skill_intents_contract_alerts.py
(+51 files in other folders)
