[build-system]
requires = ["uv_build>=0.11.12,<0.12"]
build-backend = "uv_build"

[project]
name = "clawbio"
version = "0.5.1"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.82",
    "conda-lock>=2.0",
    "google-auth>=2,<3",
    "google-cloud-bigquery>=3,<4",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "openai>=1.0",
    "opentelemetry-sdk>=1.20,<2",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pydeseq2>=0.4",
    "rocrate>=0.15.0",
    "scikit-learn>=1.3",
]

[dependency-groups]
bot = [
    "python-telegram-bot[job-queue]>=21.0",
    "discord.py>=2.3.0",
    "flask>=3.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0",
]

[tool.uv]
exclude-newer = "7 days"

[tool.uv.build-backend]
module-root = ""
